--- a/index.html
+++ b/index.html
@@ -5,9 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/stylesheet.css">
-    <title>Document</title>
+    <title>Guide to Guide Dogs</title>
 </head>
-<body>
-    <h1>Hello World</h1>
+<body>    
+ <h1>Guide Dogs for the Blind<div class="guideLogo">
+    <img src="/images/guideLogo.jpg"
+    alt="logo" width="75px" height="75px"></h1>
+<div class="sticky">
+    <nav class="border">
+        <ul>
+            <li><a href="index.html"><button>Home</button></a></li>
+            <li><a href="about.html"><button>About</button></a></li>
+            <li><a href="contact.html"><button>Contact</button></a></li>
+        </ul>
+    </nav>
+</div>
+    <img src="/images/guidedog1.jpg"
+    alt="Guide" class="center">
+</div>
+<div class="column1">
+   <h2>What does Guide Dogs for the Blind do?</h2>
+   <p>Guide Dogs for the Blind is an organization that strives to help blind or visually impaired individuals to gain a sense of independence by pairing them with their specially trained dogs. As a team, they learn how to work together and are able to go about their daily activities with a newfound confidence. This creates a strong bond between dog and handler as they build a lasting trust with one another. 
+   </p>
+   <p>Before they can become guides though, the dogs go through a series of training within their first year. This starts as soon as they are placed with volunteers as puppies. These volunteers are also known as "puppy raisers" and provide the essential foundation training.</p>
+</div>
+    <div class="guidedog2">
+        <img src="/images/guidedog2.jpg" alt="Guide2" width="355px" height="350px">
+    </div>
+    <div class="puppy">
+        <img src="/images/Puppy.jpg" alt="Puppy" width="400px" height="470px">
+</div>
+<div class="column2">
+    <h3>Interested in becoming a puppy raiser?</h3>
+    <p>Raising guide dog puppies can be a rewarding and fulfilling accomplishment. What's better than helping people while also playing with puppies? But there is a lot to consider before jumping into puppy raising. Check out the requirements and considerations on the "About" page, and if you are interested in pursuing puppy raising our information can be found in the "Contact" section</p>
+</div>
+    <footer>
+        <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6391.946553110644!2d-122.54203523267981!3d38.00012747796719!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085977f59b8e6a7%3A0xc06ee5afe9926f57!2sGuide%20Dogs%20For%20The%20Blind%20Inc!5e0!3m2!1sen!2sus!4v1635447583512!5m2!1sen!2sus" width="150" height="100" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div><a 
+        
+        href="mailto:trishawna_b@yahoo.com">Send Me an Email</a>
+        <p>Author: Trishawna Brown</p>
+        <div class="fb-logo">
+            <a href="https://www.facebook.com/guidedogsfortheblind"><img src="images/fb-logo.png" alt="Facebook Social Icon" width=75px height="75px"></a>
+        </div>
+    </footer>
 </body>
 </html>
